// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing Wrapper style component renders InfoBox 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "marginBottom": 8,
        "marginTop": 8,
      },
    ]
  }
/>
`;

exports[`testing Wrapper style component renders WrapperHorizontal 1`] = `
<View
  big={true}
  style={
    [
      {
        "paddingLeft": 26.5,
        "paddingRight": 26.5,
      },
    ]
  }
/>
`;

exports[`testing Wrapper style component renders WrapperRow 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
    ]
  }
/>
`;

exports[`testing Wrapper style component renders WrapperRow that centers items 1`] = `
<View
  center={true}
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "center",
      },
    ]
  }
/>
`;

exports[`testing Wrapper style component renders WrapperRow that does spaceAround items 1`] = `
<View
  spaceAround={true}
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "space-around",
      },
    ]
  }
/>
`;

exports[`testing Wrapper style component renders WrapperRow that does spaceBetween items 1`] = `
<View
  spaceBetween={true}
  style={
    [
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
    ]
  }
/>
`;

exports[`testing Wrapper style component renders WrapperVertical 1`] = `
<View
  style={
    [
      {
        "paddingBottom": 25,
        "paddingTop": 25,
      },
    ]
  }
/>
`;

exports[`testing Wrapper style component renders WrapperWrap 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "width": "100%",
      },
    ]
  }
/>
`;

exports[`testing Wrapper style component renders a default Wrapper 1`] = `
<View
  style={
    [
      {
        "paddingBottom": 25,
        "paddingLeft": 25,
        "paddingRight": 25,
        "paddingTop": 25,
      },
    ]
  }
/>
`;
